--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-  "name": "cursors-emitter",
-  "version": "1.0.0",
-  "description": "",
-  "source": "src/index.pug",
+  "name": "vi-bg",
+  "description": "a library / fork / ever-so-slight adaptation of github.com/marvinx-x/cursors-emitter",
+  "version": "0.0.1",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vi-bg.umd.cjs",
+  "module": "./dist/vi-bg.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vi-bg.js",
+      "require": "./dist/vi-bg.umd.cjs"
+    }
+  },
   "scripts": {
-    "start": "parcel src/index.pug",
-    "build": "parcel build src/index.pug --public-url ./"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/marvinx-x/cursors-emitter.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marvinx-x/cursors-emitter/issues"
-  },
-  "homepage": "https://github.com/marvinx-x/cursors-emitter#readme",
   "devDependencies": {
-    "@parcel/transformer-pug": "^2.6.2",
-    "@parcel/transformer-sass": "^2.6.2",
-    "parcel": "^2.1.1",
-    "process": "^0.11.10",
-    "sharp": "^0.29.3"
-  },
-  "dependencies": {
-    "@swup/fade-theme": "^1.0.5",
-    "d3": "^7.3.0",
-    "detect-browser": "^5.3.0",
-    "swup": "^2.0.14"
+    "vite": "^4.4.11"
   }
 }
